# MLProject

./: README.md  main.py  pyproject.toml  requirements.txt
artifacts/: model.pkl  preprocessor.pkl
notebooks/: EDA.ipynb  Model.ipynb
notebooks/catboost_info/: catboost_training.json  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
src/: __init__.py  exception.py  logger.py  utils.py
src/components/: __init__.py  data_ingestion.py  data_transformation.py  model_trainer.py
